# minecraft

./: .gitignore  CMakeLists.txt  FindGlew.cmake  FindOpenGL.cmake  README.md  minecraft
assets/custom_minecraft/: blocklist.json  entitylist.json  itemlist.json
assets/shaders/: fragmentShader.glsl  gameUiFragmentShader.glsl  gameUiVertexShader.glsl  singleColorShader.glsl  vertexShader.glsl
includes/: Camera.hpp  Light.hpp  Window.hpp  stb_image.h
includes/game/: Block.hpp  BlockType.hpp  Character.hpp  GameObject.hpp  OpenWorldScene.hpp  Scene.hpp
includes/gameLib/: Scene.hpp  SceneControls.hpp
includes/gameLib/inventory/: Inventory.hpp  InventoryItem.hpp  InventoryUI.hpp
includes/gameLib/ui/: GameUI2D.hpp
includes/graphics/: Mesh.hpp  Shader.hpp  Texture.hpp
includes/minecraft/: Item.hpp  ItemType.hpp  MinecraftInventoryItem.hpp  Recipe.hpp
includes/minecraft/ui/: CharacterStatusUI.hpp  QuickInventoryUI.hpp
src/: Camera.cpp  Light.cpp  Window.cpp  main.cpp
src/game/: Block.cpp  BlockType.cpp  Character.cpp  GameObject.cpp  OpenWorldScene.cpp  Scene.cpp
src/gameLib/: SceneControls.cpp  testDrawRemoveLater.cpp
src/gameLib/inventory/: Inventory.cpp  InventoryItem.cpp  InventoryUI.cpp
src/gameLib/ui/: GameUI2D.cpp
src/graphics/: Mesh.cpp  Shader.cpp  Texture.cpp
src/minecraft/: Item.cpp  ItemType.cpp  MinecraftInventoryItem.cpp  Recipe.cpp
src/minecraft/ui/: CharacterStatusUI.cpp  QuickInventoryUI.cpp
